# r-probability-calc

./: Cargo.toml  LICENSE  README.md  run.sh
app/: index.html  package.json  tsconfig.json  webpack.config.js
app/src/: App.tsx  index.tsx
app/src/components/: CalcLazyWrapper.tsx  Calculator.tsx  calc.test.ts  main.test.ts  validation.test.ts  validation.ts
pkg/: README.md  package.json  probability_calc.d.ts  probability_calc.js  probability_calc_bg.js  probability_calc_bg.wasm  probability_calc_bg.wasm.d.ts
src/: lib.rs
