[package]
name = "probability-calc"
version = "0.0.1"
authors = ["Alex Swan <alexswan10k@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.63"
rand = { version = "0.7.3", features = ["wasm-bindgen"] }

[package.metadata.wasm-pack.profile.release]
wasm-opt = false